# kleio

./: .flake8  .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  requirements.txt
data/input/: .gitignore
notebooks/: output.txt  walkthrough.ipynb
src/kleio/: collation.py  constants.py  correction.py  general_utils.py  image_utils.py  llm_utils.py  ocr.py  translation.py
streamlit/: kleio.py
tests/: conftest.py  test_general_utils.py  test_image_utils.py  test_llm_utils.py
