[tool.poetry]
name = "kleio"
version = "0.1.0"
description = "Correct long-form text, e.g., poor OCR results."
authors = ["jared-neumann <janeuman@iu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytesseract = "^0.3.10"
langchain = "^0.1.0"
nox = "^2023.4.22"
ipykernel = "^6.28.0"
jupyter = "^1.0.0"
ipython = "^8.20.0"
flake8 = "^7.0.0"
black = "^23.12.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pymupdf = "^1.23.12"
opencv-python = "^4.9.0.80"
pypdf2 = "^3.0.1"
pydantic = "^2.5.3"
matplotlib = "^3.8.2"
pdf2image = "^1.17.0"
langchain-community = "^0.0.12"
langchain-core = "^0.1.10"
langchain-openai = "^0.0.2.post1"
streamlit = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
